--- a/index.html
+++ b/index.html
@@ -16,4 +16,28 @@
     <img src="img1.jpeg">
     <p>Bem-vindo à BioCura, onde acreditamos que a beleza está na natureza. Nossa missão é proporcionar produtos de cosméticos naturais que cuidam do seu corpo e do meio ambiente.</p>
 </body>
+
+<div class="produtos">
+    <h1>Nossos Produtos</h1>
+    <div class="grid">
+        <div class="item">
+            <h2>Nome do Produto</h2>
+            <img class="imagem-produto" src="img/teste.jpeg">
+            <p>Tamanho: </p>
+            <p>Preço: R$</p>
+        </div>
+        <div class="item">
+            <h2>Nome do Produto</h2>
+            <img class="imagem-produto" src="img/teste.jpeg">
+            <p>Tamanho: </p>
+            <p>Preço: R$</p>
+        </div>
+        <div class="item">
+            <h2>Nome do Produto</h2>
+            <img class="imagem-produto" src="img/teste.jpeg">
+            <p>Tamanho: </p>
+            <p>Preço: R$</p>
+        </div>
+    </div>
+</div>
 </html>
