--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         body{
-            background-image: url("textura.jpeg");
+            background-image: url("image3.jpg");
         }
     </style>
 </head>
